tests/cases/errors/parser/stmt_print.vnm
fn main() {
    let x = 1;
    let y = 2;
    if (x > y) {
      print x
    }
    return 0;
}
main();
